Finsihed initial setup

--- a/src/app/content/announcement/announcement.component.html
+++ b/src/app/content/announcement/announcement.component.html
@@ -1,3 +1,37 @@
-<p>
-  announcement works!
-</p>
+<div class="ui segment container">
+  <div class="ui top ribbon label">Announcement</div>
+  <app-content-editors></app-content-editors>
+  <div class="ui large feed">
+    <div class="event">
+      <div class="label">
+        <a><i class="announcement icon"></i></a>
+      </div>
+      <div class="content">
+        <div class="summary">
+          <a>
+            Announcement
+          </a> pay attention, please!
+          <span class="date">
+                        53 secs go
+                    </span>
+        </div>
+        <h2 class="ui teal sub header">
+          <b>Payment of Fees</b>
+        </h2>
+        <div class="description">
+          <p>
+            All Students are required to pay their fees before April, 2017.<br>
+            Thank you
+          </p>
+        </div>
+        <div class="ui selection list">
+          <span class="meta">Submitted by:</span>
+          <a class="item">
+            <i class="spy icon"></i>
+            Clinton Yeboah
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
