--- a/src/app/content/article/article.component.html
+++ b/src/app/content/article/article.component.html
@@ -1,3 +1,74 @@
-<p>
-  article works!
-</p>
+<div class="ui segment container">
+  <div class="ui top ribbon label">Article</div>
+  <app-content-editors></app-content-editors>
+  <div class="ui large feed">
+    <div class="event">
+      <div class="label">
+        <a><img src="../../images/custom/male-avatar-tiny.png"></a>
+      </div>
+      <div class="content">
+        <div class="summary">
+          <a>
+            Clinton Yeboah
+          </a> submitted a new article
+          <span class="date">
+          53 secs go
+        </span>
+        </div>
+        <h2 class="ui teal sub header">
+          <b>To be, or not to be</b>
+        </h2>
+        <div class="description">
+          <p>
+            To be, or not to be, that is the question:<br>
+            Whether 'tis Nobler in the mind to suffer<br>
+            The Slings and Arrows of outrageous Fortune,<br>
+            Or to take Arms against a Sea of troubles,<br>
+            And by opposing end them: to die, to sleep<br>
+            No more; and by a sleep, to say we end<br>
+            The Heart-ache, and the thousand Natural shocks<br>
+            That Flesh is heir to? 'Tis a consummation<br>
+            Devoutly to be wished. To die, to sleep,<br>
+            To sleep, perchance to Dream; aye, there's the rub,<br>
+            For in that sleep of death, what dreams may come,<br>
+            When we have shuffled off this mortal coil,<br>
+            Must give us pause. There's the respect<br>
+            That makes Calamity of so long life:<br>
+            <a>Read more</a>
+          </p>
+        </div>
+        <div class="extra images">
+          <a><img src="../../images/custom/male-avatar.png"></a>
+          <a><img src="../../images/custom/male-avatar.png"></a>
+        </div>
+        <div class="ui middle aligned selection relaxed horizontal list">
+          <a class="item">
+            <i class="tag icon"></i> Poetry
+          </a>
+          <a class="item">
+            <i class="tag icon"></i> Moral Lesson
+          </a>
+          <a class="item">
+            <i class="tag icon"></i> Emotional
+          </a>
+        </div>
+        <div></div>
+        <div class="meta">
+          <a class="like">
+            <i class="thumbs up icon"></i> 4 Likes
+          </a>
+          <a class="like">
+            <i class="thumbs down icon"></i> 4 Likes
+          </a>
+        </div>
+        <div class="ui selection list">
+          <span class="meta">Submitted by:</span>
+          <a class="item">
+            <i class="spy icon"></i>
+            Clinton Yeboah
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
