--- a/src/app/content/event/event.component.html
+++ b/src/app/content/event/event.component.html
@@ -1,3 +1,74 @@
-<p>
-  event works!
-</p>
+<div class="ui segment container">
+  <div class="ui top ribbon label">Event</div>
+  <app-content-editors></app-content-editors>
+  <div class="ui large feed">
+    <div class="event">
+      <div class="label">
+        <a><i class="pencil icon"></i></a>
+      </div>
+      <div class="content">
+        <div class="summary">
+          <a>
+            A New Event
+          </a> was added
+          <span class="date">
+          53 secs go
+        </span>
+        </div>
+        <h2 class="ui teal sub header">
+          <b>Dance Party</b>
+        </h2>
+        <div class="description">
+          <p>
+            Have you ever been stunned by the sight of a lap dance.<br>
+            Come see use rock it, LIVE!
+          </p>
+        </div>
+        <div class="ui middle aligned animated selection relaxed list">
+          <a class="item">
+            <i class="paint brush icon"></i>
+            Dance Party
+          </a>
+          <a class="item">
+            <i class="calendar icon"></i>
+            22nd October, 2017
+          </a>
+          <a class="item">
+            <i class="alarm icon"></i>
+            2:00 pm sharp!
+          </a>
+          <a class="item">
+            <i class="university icon"></i>
+            Campus 6
+          </a>
+          <a class="item">
+            <i class="rupee icon"></i>
+            Free!
+          </a>
+        </div>
+        <div class="extra images">
+          <a><img src="../../images/custom/male-avatar-small.png"></a>
+          <a><img src="../../images/custom/male-avatar-small.png"></a>
+          <a><img src="../../images/custom/male-avatar-small.png"></a>
+          <a><img src="../../images/custom/male-avatar-small.png"></a>
+          <a><img src="../../images/custom/male-avatar-small.png"></a>
+        </div>
+        <div class="meta">
+          <a class="like">
+            <i class="thumbs up icon"></i> 4 Likes
+          </a>
+          <a class="like">
+            <i class="thumbs down icon"></i> 4 Likes
+          </a>
+        </div>
+        <div class="ui selection list">
+          <span class="meta">Submitted by:</span>
+          <a class="item">
+            <i class="spy icon"></i>
+            Clinton Yeboah
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
