--- a/src/app/content/profile/profile.component.html
+++ b/src/app/content/profile/profile.component.html
@@ -1,3 +1,64 @@
-<p>
-  profile works!
-</p>
+<div class="ui segment container">
+  <h1 class="ui top attached header">
+    <a>clinton</a>'s Profile <i class="gh flag"></i>
+  </h1>
+  <div class="ui two column grid">
+    <div class="column">
+      <div class="ui fluid link raised teal card">
+        <div class="content">
+          <img class="ui avatar image" src="../../images/custom/male-avatar-tiny.png"> Elliot
+        </div>
+        <div class="image">
+          <img src="../../images/custom/male-avatar-medium.png">
+        </div>
+        <div class="content">
+          <a>
+            <i class="heart outline like icon"></i>
+            17 likes
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="ui fluid link blue card">
+        <div class="content">
+          <div class="header">About me:</div>
+        </div>
+        <table class="ui red celled selectable single line table">
+          <tbody>
+          <tr>
+            <td>Username:</td>
+            <td>clinton</td>
+          </tr>
+          <tr>
+            <td>FullName:</td>
+            <td>Clinton Yeboah</td>
+          </tr>
+          <tr>
+
+            <td>Rol Number:</td>
+            <td>1356881</td>
+          </tr>
+          <tr>
+
+            <td>Course:</td>
+            <td>MCA</td>
+          </tr>
+          <tr>
+
+            <td>Contact:</td>
+            <td>+917837405699</td>
+          </tr>
+          </tbody>
+        </table>
+
+        <div class="content">
+          <div class="extra text">
+            A little shy boy who loves to be pampered!. See ya:)
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
