--- a/src/app/content/side-nav/side-nav.component.html
+++ b/src/app/content/side-nav/side-nav.component.html
@@ -1,3 +1,53 @@
-<p>
-  side-nav works!
-</p>
+<a class="teal item">
+  <div class="ui teal header">
+    <img src="../../../assets/images/male-avatar-tiny.png" class="ui mini circular image">
+    <div class="content">
+      Username
+      <div class="ui blue sub header">Roll Number</div>
+    </div>
+  </div>
+</a>
+<div class="item">
+  <div class="ui transparent icon input">
+    <input type="text" placeholder="Search...">
+    <i class="search icon"></i>
+  </div>
+</div>
+<a class="item" routerLink="index" routerLinkActive="active teal">
+  Home
+  <div class="ui teal left pointing label">0</div>
+</a>
+<!--<a class="item">
+    Student's Section
+    <div class="ui label">0</div>
+</a>-->
+<a class="item"  routerLink="announcements" routerLinkActive="active teal">
+  Announcements
+  <div class="ui label">0</div>
+</a>
+<a class="item" routerLink="articles" routerLinkActive="active teal" >
+  Articles
+  <div class="ui label">0</div>
+</a>
+<a class="item" routerLink="events" routerLinkActive="active teal">
+  Events
+  <div class="ui label">0</div>
+</a>
+<a class="item" routerLink="profiles" routerLinkActive="active teal">
+  Your Profile
+</a>
+<a class="item">
+  Map Guide
+</a>
+<a class="item">
+  KIIT Info
+</a>
+<a class="item">
+  Help and Support
+</a>
+<a class="item">
+  Attribution
+</a>
+<a class="item">
+  Terms and Conditions
+</a>
