--- a/src/app/content/top-nav/top-nav.component.html
+++ b/src/app/content/top-nav/top-nav.component.html
@@ -1,3 +1,26 @@
-<p>
-  top-nav works!
-</p>
+<div class="ui fluid container">
+  <div class="ui fluid top attached stackable menu">
+    <a class="item">
+      <i class="teal student icon"></i>
+    </a>
+    <a class="header item">
+      <i>KIIT UNIVERSITY SOCIAL NETWORK</i>
+    </a>
+    <div class="icon menu">
+      <a class="item" data-tooltip="Post New Item" data-position="bottom right">
+        <i class="teal write icon"></i>
+      </a>
+      <a class="item" data-tooltip="Play Song" data-position="bottom right">
+        <i class="teal video play outline icon"></i>
+      </a>
+      <a class="item" data-tooltip="Give feedback" data-position="bottom right">
+        <i class="teal smile icon"></i>
+      </a>
+    </div>
+    <div class="right menu">
+      <a class="item">Register</a>
+      <a class="item">Login</a>
+      <a class="item">Help</a>
+    </div>
+  </div>
+</div>
