--- a/src/app/content/tweet/tweet.component.html
+++ b/src/app/content/tweet/tweet.component.html
@@ -1,3 +1,51 @@
-<p>
-  tweet works!
-</p>
+<div class="ui segment container">
+  <div class="ui small feed">
+    <div class="event">
+      <div class="label">
+        <a><img src="../../../assets/images/male-avatar-tiny.png"></a>
+      </div>
+      <div class="content">
+        <div class="summary">
+          <a class="user">
+            Clinton Yeboah
+          </a> said something
+        </div>
+        <div class="extra text">
+          Life is full of surprises. Today I'm a boy. Tommorrow, I'm a dad.
+        </div>
+        <div class="extra images">
+          <a><img src="../../../assets/images/male-avatar-tiny.png"></a>
+          <a><img src="../../../assets/images/male-avatar-tiny.png"></a>
+        </div>
+        <div class="meta">
+          <a class="like">
+            <i class="thumbs up icon"></i> 4 Likes
+          </a>
+          <a class="like">
+            <i class="thumbs down icon"></i> 4 Likes
+          </a>
+          <span class="date">
+                    53 secs go
+                </span>
+          <div class="ui floating right left inline pointing dropdown">
+            <i class="dropdown icon"></i>
+            <div class="right menu">
+              <a class="item">
+                <i class="edit icon"></i>
+                Edit
+              </a>
+              <a class="item">
+                <i class="remove icon"></i>
+                Remove
+              </a>
+              <a class="item">
+                <i class="legal icon"></i>
+                Report
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
