--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -21,7 +21,7 @@
             <input type="password" name="password" placeholder="Password">
           </div>
         </div>
-        <div class="ui fluid large teal submit button">Login</div>
+        <div class="ui fluid large teal submit button" (click)="doLogin()" >Login</div>
       </div>
 
       <div class="ui error message"></div>
