store feature successfully implemented

--- a/src/app/content/container/container.component.html
+++ b/src/app/content/container/container.component.html
@@ -1,4 +1,8 @@
-<app-side-nav class="ui large visible left vertical menu fixed inline push sidebar"></app-side-nav>
+<app-side-nav
+  class="ui large visible left vertical menu fixed inline push sidebar">
+
+</app-side-nav>
+
 <div class="pusher right">
   <app-top-nav></app-top-nav>
   <div class="ui grid container">
