--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="ui center aligned container grid">
   <div class="column">
     <h2 class="ui teal image header">
-      <img src="../../images/custom/male-avatar-tiny.png" class="image">
+      <img src="../../../assets/images/male-avatar-tiny.png" class="image">
       <div class="content">
         Log-in to your account
       </div>
