moving to login feature branch

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -12,7 +12,7 @@
         <div class="field">
           <div class="ui left icon input">
             <i class="user icon"></i>
-            <input type="number" name="rollnumber" placeholder="Roll Number">
+            <input type="number" name="roll-number" placeholder="Roll Number">
           </div>
         </div>
         <div class="field">
