--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,21 +7,21 @@
       </div>
     </h2>
 
-    <form class="ui large form">
+    <form class="ui large form" #f="ngForm" (ngSubmit)="onSubmit(f.value)" [ngClass]="formClasses()">
       <div class="ui stacked segment">
         <div class="field">
           <div class="ui left icon input">
             <i class="user icon"></i>
-            <input type="number" name="roll-number" placeholder="Roll Number">
+            <input type="number" name="rollnumber" placeholder="Roll Number" value="user.username" ngModel>
           </div>
         </div>
         <div class="field">
           <div class="ui left icon input">
             <i class="lock icon"></i>
-            <input type="password" name="password" placeholder="Password">
+            <input type="password" name="password" placeholder="Password" ngModel>
           </div>
         </div>
-        <div class="ui fluid large teal submit button" (click)="doLogin()" >Login</div>
+        <button type="submit" class="ui fluid large teal submit button">Login</button>
       </div>
 
       <div class="ui error message"></div>
