--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,10 +1,19 @@
-.grid {
-  height: auto;
-  margin-top: 100px;
-}
-.image {
-  /*margin-top: -100px;*/
-}
 .column {
   max-width: 450px;
+}
+
+.grid{
+  width: 100%;
+  height: 100%;
+}
+
+.my-centered{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
