--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,35 +1,50 @@
-<div class="ui center aligned container grid">
-  <div class="column">
-    <h2 class="ui teal image header">
-      <img src="../../../assets/images/male-avatar-tiny.png" class="image">
-      <div class="content">
-        Log-in to your account
-      </div>
-    </h2>
-
-    <form class="ui large form" #f="ngForm" (ngSubmit)="onSubmit(f.value)" [ngClass]="formClasses()">
-      <div class="ui stacked segment">
-        <div class="field">
-          <div class="ui left icon input">
-            <i class="user icon"></i>
-            <input type="number" name="rollnumber" placeholder="Roll Number" value="user.username" ngModel>
-          </div>
+<div class="my-centered">
+  <div class="ui center aligned container grid">
+    <div class="column">
+      <div class="ui teal image header">
+        <img src="../../../assets/images/male-avatar-tiny.png" class="image">
+        <div class="content">
+          Log-in to your account
         </div>
-        <div class="field">
-          <div class="ui left icon input">
-            <i class="lock icon"></i>
-            <input type="password" name="password" placeholder="Password" ngModel>
-          </div>
-        </div>
-        <button type="submit" class="ui fluid large teal submit button">Login</button>
       </div>
 
-      <div class="ui error message"></div>
+      <form class="ui large form" [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup.value)"
+            [ngClass]="formClasses()">
 
-    </form>
+        <div class="ui stacked teal segment">
+          <div class="field" [class.error]="username.invalid && username.touched">
+            <div class="ui left icon input">
+              <i class="user icon"></i>
+              <input type="text"
+                     id="username"
+                     placeholder="Roll number"
+                     [formControl]="username">
+              <small *ngIf="username.hasError('required') && username.touched"
+                   class="ui left pointing red basic label">Cannot be empty
+              </small>
+            </div>
+          </div>
+          <div class="field" [class.error]="password.invalid && password.touched">
+            <div class="ui left icon input">
+              <i class="lock icon"></i>
+              <input type="password"
+                     id="password"
+                     placeholder="Password"
+                     [formControl]="password">
+              <small *ngIf="password.hasError('required') && password.touched"
+                   class="ui left pointing red basic label">Cannot be empty
+              </small>
+            </div>
+          </div>
+          <button type="submit" class="ui fluid large teal submit button" [disabled]="formGroup.invalid">Login</button>
+        </div>
 
-    <div class="ui message">
-      New to us? <a href="#">Sign Up</a>
+      </form>
+
+      <div class="ui message">
+        New to us? <a href="/signup" (click)="onSignUpClicked()"> Sign Up</a>
+      </div>
     </div>
   </div>
+
 </div>
