--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -1,10 +1,20 @@
-.grid {
-  height: auto;
-  margin-top: 100px;
-}
-.image {
-  /*margin-top: -100px;*/
-}
 .column {
-  max-width: 450px;
+  max-width: 550px;
+}
+.grid{
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.my-centered{
+  position: fixed;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-25%, -50%);
+  -moz-transform: translate(-25%, -50%);
+  -ms-transform: translate(-25%, -50%);
+  -o-transform: translate(-25%, -50%);
+  transform: translate(-25%, -50%);
 }
